# blobert

./: .claudeignore  .envrc  .gitignore  .mcp-setup.md  .mcp.json  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN_IMAGE_TEXTURES.md  README.md  Taskfile.yml  agent_context  check_syntax.py  jscpd-report.json  jscpd.json  lefthook.yml  project.godot  pytest.ini  quick_test.py  run_formatting_tests.sh  run_single_test.sh  test_debug.py  test_run_output.txt  test_runner.sh  test_runner_simple.py
asset_generation/python/: .semgrep.yml  GODOT_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  Small_Ice_hard_stats.godot  USAGE.md  adhesion_bug_stats.unity  enemy.sh  generate_base.py  generate_enemies.py  main.py  model_registry.json  model_registry.json.pre-pull-backup  pyproject.toml
asset_generation/python/animated_exports/: Large_Fire_normal.blend  Large_Fire_normal.blend1  Large_Fire_normal.glb  Small_Ice_hard.blend  Small_Ice_hard.glb  Small_Toxic_normal.blend  Small_Toxic_normal.glb  acid_spitter_animated_00.glb  acid_spitter_animated_01.glb  acid_spitter_animated_02.glb  adhesion_bug_animated_00.attacks.json  adhesion_bug_animated_00.blend  adhesion_bug_animated_00.blend1  adhesion_bug_animated_00.glb  adhesion_bug_animated_00_integrated.blend  adhesion_bug_animated_00_integrated.glb  adhesion_bug_animated_01.attacks.json  adhesion_bug_animated_01.glb  adhesion_bug_animated_02.attacks.json  adhesion_bug_animated_02.glb  carapace_husk_animated_00.glb  carapace_husk_animated_01.glb  carapace_husk_animated_02.glb  carapace_husk_animated_07.glb  carapace_husk_animated_08.glb  carapace_husk_animated_09.glb  carapace_husk_animated_10.glb  carapace_husk_animated_12.glb  carapace_husk_animated_13.glb  carapace_husk_animated_14.glb  carapace_husk_animated_15.glb  claw_crawler_animated_00.glb  claw_crawler_animated_01.glb  claw_crawler_animated_02.glb  claw_crawler_animated_03.glb  claw_crawler_animated_04.glb  claw_crawler_animated_05.glb  ember_imp_animated_00.blend  ember_imp_animated_00.blend1  ember_imp_animated_00.glb  (+61 more)
asset_generation/python/docs/: ARCHITECTURE_SUMMARY.md  EXTERNAL_MODEL_INTEGRATION.md  MIGRATION_GUIDE.md  REFERENCES.md  SMART_GENERATION.md
asset_generation/python/examples/: advanced_materials_demo.py  external_integration_demo.py
asset_generation/python/exports/: adhesion_bug_00.glb  adhesion_bug_01.glb  adhesion_bug_02.glb  adhesion_bug_03.glb  adhesion_bug_04.glb  tar_slug_00.glb  tar_slug_01.glb  tar_slug_02.glb  tar_slug_03.glb  tar_slug_04.glb
asset_generation/python/player_exports/: player_slime_blue_00.glb  player_slime_blue_00.player.json  player_slime_blue_01.glb  player_slime_blue_01.player.json  player_slime_blue_02.glb  player_slime_blue_02.player.json  player_slime_green_00.glb  player_slime_green_00.player.json  player_slime_green_01.glb  player_slime_green_01.player.json  player_slime_green_02.glb  player_slime_green_02.player.json  player_slime_pink_00.glb  player_slime_pink_00.player.json
asset_generation/python/src/: AGENTS.md  __init__.py  generator.py  level_generator.py  player_generator.py
asset_generation/python/src/animations/: __init__.py  animation_system.py  armature_builders.py  body_types.py  keyframe_system.py
asset_generation/python/src/blobert_asset_pipeline_mcp/: README.md  __init__.py  __main__.py  http_util.py  server.py
asset_generation/python/src/body_families/: __init__.py  bones.py  factory.py  ids.py  keywords.py  motion_base.py  motion_blob.py  motion_humanoid.py  motion_quadruped.py  registry.py
asset_generation/python/src/combat/: __init__.py  attack_data.py  enemy_attack_profiles.py
asset_generation/python/src/core/: __init__.py  blender_utils.py  creature_parts.py  mesh_ops.py  primitives.py  rig_presets.py  rig_types.py
asset_generation/python/src/enemies/: __init__.py  animated_acid_spitter.py  animated_adhesion_bug.py  animated_carapace_husk.py  animated_claw_crawler.py  animated_ember_imp.py  animated_enemies.py  animated_enemy.py  animated_imp.py  animated_pipeline.py  animated_slug.py  animated_spider.py  animated_spider_eye_helpers.py  animated_spitter.py  animated_tar_slug.py  base_animated_model.py  base_enemy.py  base_models.py  builder_template.py  composition_integration.py  composition_utils.py  example_new_enemy.py  zone_geometry_extras_attach.py
asset_generation/python/src/integration/: __init__.py  external_model_importer.py
asset_generation/python/src/level/: __init__.py  base_level_object.py  checkpoints.py  level_materials.py  level_object_builder.py  level_object_data.py  platforms.py  traps.py  walls.py
asset_generation/python/src/materials/: __init__.py  advanced_materials.py  color_utils.py  feature_zones.py  gradient_generator.py  material_lookup.py  material_stripes_zone.py  material_system.py  material_system_enemy_themes.py  material_types.py  pattern_composite.py  pattern_texture_generators.py  png_encoding.py  presets.py  spot_overlay.py  spot_plate_mask.py  spots_composite_debug.py  spots_zone_pipeline.py  system.py  texture_handlers.py  uv_atlas.py
asset_generation/python/src/model_registry/: __init__.py  migrations.py  path_layout.py  schema.py  service.py  store.py  tags.py
asset_generation/python/src/player/: __init__.py  player_animations.py  player_armature.py  player_builder.py  player_materials.py  player_slime_body.py
asset_generation/python/src/prefabs/: __init__.py  prefab_library.py  prefab_loader.py
asset_generation/python/src/smart/: __init__.py  smart_generation.py
asset_generation/python/src/utils/: __init__.py  animated_build_options.py  animated_build_options_appendage_defs.py  animated_build_options_mesh_controls.py  animated_build_options_part_feature_defs.py  demo.py  (+20 more)
asset_generation/python/tests/: conftest.py  test_generator_sys_path_insert.py  test_level_generator_variant_start.py  test_py_organization_dynamic_access.py  test_pylint_tool_config.py
asset_generation/python/texture_assets/: blobert_procedural_level_generation_design.docx  blobert_texture_usage_guide.md
asset_generation/python/working_exports/: working_adhesion_bug.glb
(+2719 files in other folders)
