[project]
name = "blender-experiments"
version = "0.1.0"
description = "Procedural 3D enemy generation pipeline for Blender"
requires-python = ">=3.11"

# Runtime dependencies for texture asset loading (used by backend + Blender pipeline)
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0",
    "diff-cover>=9.0",
    "fastapi==0.115.5",
    "httpx==0.28.1",
    "pydantic-settings==2.6.1",
    "sse-starlette==2.1.3",
    # chardet 7 ships darwin .so helpers; mixed-arch venvs (e.g. Rosetta) can ImportError. Stay on 5.x.
    "chardet>=5.2,<6",
    "ruff>=0.8",
    # MCP stdio server (ticket M23-03); also in optional group `mcp` for minimal installs.
    "fastmcp>=3.2.3",
    # Type stubs for bpy — enables IDE completion without a full Blender install.
    # Match the stub version to your installed Blender version, e.g.:
    #   pip install fake-bpy-module-4-3   (Blender 4.3)
    #   pip install fake-bpy-module-4-2   (Blender 4.2)
    # Stubs are not required to run the test suite; tests mock bpy at runtime.
]
mcp = [
    "fastmcp>=3.2.3",
]

[tool.ruff]
target-version = "py311"
extend-exclude = [
    "examples",
    ".venv",
]

[tool.ruff.lint]
# Pre-commit / pre-push gate: Pyflakes + isort + runtime errors (pycodestyle E9xx).
# Broader pycodestyle (E4/E7) is intentionally omitted: tests use late imports after
# sys.modules stubs (E402), and CLI entrypoints tweak sys.path before imports.
select = ["E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Ensures "from src." imports resolve from the project root without installing
# the package or manually adjusting sys.path.
pythonpath = [".", "src"]
filterwarnings = [
    # Pure-Python coverage (timid) avoids tracer .so; keep a net if plugins warn anyway.
    "ignore:Couldn't import C tracer:coverage.exceptions.CoverageWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
# sys.settrace() only — no compiled tracer .so (Rosetta x86_64 vs arm64 .venv wheels).
timid = true
omit = [
    # CLI demo only; not exercised by the pipeline test suite.
    "src/utils/demo.py",
]

[tool.coverage.report]
# Line coverage on the whole tree stays informational; pre-push/CI enforce ≥85% on the
# diff vs main via diff-cover (see .lefthook/scripts/py-tests.sh).
skip_empty = true
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "^\\.\\.\\.$",
]
